--- a/style.css
+++ b/style.css
@@ -1,70 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    user-select: none;
-    overflow:initial;
-    font-family: 'Nothing You Could Do', cursive;
-}
-body{
-    background-image: url(./assets/starry.jpg);
-}
-button{
-    margin: 2px;
-    background: transparent;
-    border: #ffffff 4px solid;
-    border-radius: 100%;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 11px;
-    padding-right: 11px;
-    margin-left: 10px;
-    user-select: none;
-}
-button:hover{
-    cursor: pointer;
-    background-color: rgba(220, 220, 220, 0.5);
-}
-.allContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.buttons{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    margin-top: 3px;
-    margin-left: 1010px;
-}
-.daVinci{
-    width: 600px;
-    border-bottom: 4px solid #000000;
-    margin-top: -100px;
-
-}
-.caballete{
-    width: 900px;
-    margin-left: 655px;
-    margin-top: -7px;
-    margin-bottom: -5px;
-}
-.row{
-    display: flex;
-    flex-direction: row;
-}
-.mano{
-    width: 200px;
-    margin-top: 100px;
-    margin-left: 300px;
-}
-.imagenes{
-    width: 800px;
-    height: 600px;
-    background-color: #ffffff;
-    border: 2px solid #000000af;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');*{padding:0;margin:0;box-sizing:border-box;user-select:none;overflow:initial;font-family:'Nothing You Could Do',cursive;}body{background-image:url(./assets/starry.jpg);}button{margin:2px;background:transparent;border:#ffffff 4px solid;border-radius:100%;padding-top:8px;padding-bottom:8px;padding-left:11px;padding-right:11px;margin-left:10px;user-select:none;}button:hover{cursor:pointer;background-color:rgba(220,220,220,0.5);}.allContainer{display:flex;justify-content:center;align-items:center;flex-direction:column;}.buttons{display:flex;flex-direction:row;justify-content:center;align-items:center;position:absolute;margin-top:3px;margin-left:1010px;z-index:1000;}.daVinci{width:600px;border-bottom:4px solid #000000;margin-top:-100px;}.caballete{width:900px;margin-left:655px;margin-top:-7px;margin-bottom:-5px;}.row{display:flex;flex-direction:row;}.mano{width:200px;margin-top:100px;margin-left:300px;}.imagenes{width:800px;height:600px;background-color:#ffffff;border:2px solid #000000af;}
